src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLX11_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLX11_StringErrorContext.class */
public final class GLX11_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXQueryExtensionsString(JI)J", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        methods.put("glXQueryExtensionsString(JI)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        methods.put("nglXGetClientString(JI)J", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        methods.put("glXGetClientString(JI)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        methods.put("nglXQueryServerString(JII)J", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        methods.put("glXQueryServerString(JII)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/GLX11ErrorContext");
        return methods;
    }
}
